...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="global-bg" translatesAutoresizingMaskIntoConstraints="NO" id="AnW-93-lGA">
                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                            </imageView>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zhp-BQ-RLT" userLabel="players">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="playerCell" rowHeight="75" id="pqs-cz-96h" customClass="PlayerCell" customModule="Xcuit" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="600" height="75"/>
...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gma-8N-qi0">
                                <rect key="frame" x="225" y="310" width="150" height="130"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1y3-TT-ybQ">
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_textfield_email"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="ZYC-UR-nmc"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o0l-Hu-eGk">
                                        <rect key="frame" x="0.0" y="50" width="150" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_textfield_password"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="OtJ-ZB-6kN"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G2i-kw-KDv">
                                        <rect key="frame" x="0.0" y="100" width="150" height="30"/>
                                        <color key="backgroundColor" red="0.38153798309999998" green="0.11906949159999999" blue="0.46873363870000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_login"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="logIn:" destination="rum-75-abM" eventType="touchUpInside" id="sVP-R4-d5x"/>
                                        </connections>
...
            <point key="canvasLocation" x="-80" y="-3"/>
        </scene>
        <!--Players-->
        <scene sceneID="MZn-a2-wv5">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6TX-fC-Gpn" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Players" image="players" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4W9-Us-LBb">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="0.38153798309999998" green="0.11906949159999999" blue="0.46873363870000001" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="barTintColor" red="0.38153798309999998" green="0.11906949159999999" blue="0.46873363870000001" alpha="1" colorSpace="calibratedRGB"/>
...
