...
                                      height: height)
            
            let messageLabel = UILabel(frame: elementFrame)
            messageLabel.text = "You already purchased this character"
            messageLabel.alpha = 0
            messageLabel.textColor = UIColor.whiteColor()
            messageLabel.accessibilityIdentifier = "message-label"
            self.view.addSubview(messageLabel)
            
            UIView.animateWithDuration(1, delay: 0.5, options: .CurveEaseIn, animations: {
                messageLabel.alpha = 1
                }, completion: { (_) in
            })
...
            let purchaseButton = UIButton(frame: elementFrame)
            purchaseButton.layer.cornerRadius = 5.0
            purchaseButton.backgroundColor = player.owned ? purchaseButtonDisabled : purchaseButtonEnabled
            purchaseButton.enabled = !player.owned
            purchaseButton.addTarget(self, action: #selector(PlayerDetailsViewController.buyPlayer(_:)), forControlEvents: .TouchUpInside)
            purchaseButton.setTitle("Buy", forState: .Normal)
            purchaseButton.accessibilityIdentifier = "purchase-button"
            
            UIView.animateWithDuration(1, delay: 1, usingSpringWithDamping: 0.6, initialSpringVelocity: 10, options: .CurveEaseIn, animations: {
                self.view.addSubview(purchaseButton)
                purchaseButton.center = centerPoint
                }, completion: { (_) in
            })
...
